finishes implementing model

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1580,6 +1580,121 @@
     "\n",
     "test_solution(y, solution)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassifierChainWithLOPAndGA():\n",
+    "    def __init__(self, base_classifier: Any, num_generations: int = 5, random_state: Optional[int] = None) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.num_generations = num_generations\n",
+    "\n",
+    "        if random_state is None:\n",
+    "            self.random_state = np.random.randint(0, 1000)\n",
+    "        else:\n",
+    "            self.random_state = random_state\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.probs = calculate_probabilities(y)\n",
+    "        self.entropies = calculate_entropies(self.probs)\n",
+    "        self.label_count = y.shape[1]\n",
+    "\n",
+    "        label_space = np.arange(label_count)\n",
+    "        solutions_per_population = math.ceil(label_count / 2)\n",
+    "\n",
+    "        ga_model = pygad.GA( #type:ignore\n",
+    "            gene_type=int,\n",
+    "            gene_space=label_space,\n",
+    "            random_seed=self.random_state,\n",
+    "            save_best_solutions=False,\n",
+    "            fitness_func=self.model_fitness_func,\n",
+    "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
+    "            num_genes=label_count,\n",
+    "\n",
+    "            # set up\n",
+    "            num_generations=self.num_generations,\n",
+    "            sol_per_pop=solutions_per_population,\n",
+    "\n",
+    "            # following what the article describes\n",
+    "            keep_elitism=1, # also following what the article describes, but we have to double check [TODO]\n",
+    "            parent_selection_type=\"rws\", # following what the article describes\n",
+    "            # mutation_probability=0.005, # following what the article describes\n",
+    "\n",
+    "            # the following settings are fixed\n",
+    "            # they were chosen for no particular reason\n",
+    "            # they are being kept as fixed to simplify the model\n",
+    "            num_parents_mating=2,\n",
+    "            crossover_type=\"scattered\",\n",
+    "            mutation_type=\"random\",\n",
+    "            mutation_by_replacement=True,\n",
+    "            mutation_num_genes=1,\n",
+    "        )\n",
+    "\n",
+    "        ga_model.run()\n",
+    "\n",
+    "        solution, _, _ = ga_model.best_solution()\n",
+    "\n",
+    "        best_classifier = ClassifierChain(\n",
+    "            classifier=copy.deepcopy(self.base_classifier),\n",
+    "            require_dense=[False, True],\n",
+    "            order=solution,\n",
+    "        )\n",
+    "\n",
+    "        best_classifier.fit(X, y)\n",
+    "\n",
+    "        self.best_classifier = best_classifier\n",
+    "    \n",
+    "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
+    "        return self.test_solution(solution)\n",
+    "\n",
+    "    def test_solution(self, label_order: List[int]) -> float:\n",
+    "        if self.probs is None or self.entropies is None:\n",
+    "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
+    "        \n",
+    "        lop_matrix = build_lop_matrix(label_order, self.probs, self.entropies)\n",
+    "        return calculate_lop(lop_matrix)\n",
+    "    \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        if self.best_classifier is None:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
+    "        return self.best_classifier.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hamming loss: 0.24136008918617613\n",
+      "f1 score: 0.18224981991693623\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = datasets[\"scene\"][\"X_train\"]\n",
+    "y = datasets[\"scene\"][\"y_train\"]\n",
+    "X_test = datasets[\"scene\"][\"X_test\"]\n",
+    "y_test = datasets[\"scene\"][\"y_test\"]\n",
+    "\n",
+    "\n",
+    "m = ClassifierChainWithLOPAndGA(RandomForestClassifier(random_state=42), num_generations=5)\n",
+    "m.fit(X, y)\n",
+    "preds = m.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds)\n",
+    "f1_score = metrics.f1_score(y_test, preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"hamming loss: {hamming_loss}\")\n",
+    "print(f\"f1 score: {f1_score}\")\n"
+   ]
   }
  ],
  "metadata": {
