adds test with other dataset

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1666,15 +1666,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hamming loss: 0.24136008918617613\n",
-      "f1 score: 0.18224981991693623\n"
+      "hamming loss: 0.2801003344481605\n",
+      "f1 score: 0.056223522137844796\n"
      ]
     }
    ],
@@ -1684,13 +1684,64 @@
     "X_test = datasets[\"scene\"][\"X_test\"]\n",
     "y_test = datasets[\"scene\"][\"y_test\"]\n",
     "\n",
-    "\n",
-    "m = ClassifierChainWithLOPAndGA(RandomForestClassifier(random_state=42), num_generations=5)\n",
+    "m = ClassifierChainWithLOPAndGA(RandomForestClassifier(random_state=42), num_generations=20)\n",
     "m.fit(X, y)\n",
     "preds = m.predict(X_test)\n",
     "\n",
     "hamming_loss = metrics.hamming_loss(y_test, preds)\n",
     "f1_score = metrics.f1_score(y_test, preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"hamming loss: {hamming_loss}\")\n",
+    "print(f\"f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 835 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hamming loss: 0.5734323432343235\n",
+      "f1 score: 0.056981860448637754\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = datasets[\"emotions\"][\"X_train\"]\n",
+    "y = datasets[\"emotions\"][\"y_train\"]\n",
+    "X_test = datasets[\"emotions\"][\"X_test\"]\n",
+    "y_test = datasets[\"emotions\"][\"y_test\"]\n",
+    "\n",
+    "m = ClassifierChainWithLOPAndGA(RandomForestClassifier(random_state=42), num_generations=20)\n",
+    "m.fit(X, y)\n",
+    "other_preds = m.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, other_preds.todense())\n",
+    "f1_score = metrics.f1_score(y_test, other_preds, average=\"macro\")\n",
     "\n",
     "print(f\"hamming loss: {hamming_loss}\")\n",
     "print(f\"f1 score: {f1_score}\")\n"
