adds results so far

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1746,6 +1746,22 @@
     "print(f\"hamming loss: {hamming_loss}\")\n",
     "print(f\"f1 score: {f1_score}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.7. Results so far\n",
+    "\n",
+    "The model has an interesting mechanism, but the results so far are quite bad.\n",
+    "\n",
+    "We have to test with datasets that were used in the paper and check if the results are at least similar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
