describes rational for classifier chain might be the culprit

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1755,7 +1755,38 @@
     "\n",
     "The model has an interesting mechanism, but the results so far are quite bad.\n",
     "\n",
-    "We have to test with datasets that were used in the paper and check if the results are at least similar."
+    "We have to test with datasets that were used in the paper and check if the results are at least similar.\n",
+    "\n",
+    "## 9.8. Comparing the performance obtained with the paper\n",
+    "\n",
+    "I tested two datasets: `scene` and `emotions`. I will compare the results to those that the paper showed.\n",
+    "\n",
+    "* **scene**:\n",
+    "  * _my implementation_:\n",
+    "    * hamming loss: 0.2801003344481605\n",
+    "    * f1 score: 0.056223522137844796\n",
+    "  * _paper_:\n",
+    "    * hamming loss: 0.1019\n",
+    "    * f1 score: 0.6821\n",
+    "\n",
+    "* **emotions**:\n",
+    "  * _my implementation_:\n",
+    "    * hamming loss: 0.5734323432343235\n",
+    "    * f1 score:0.056981860448637754\n",
+    "  * _paper_:\n",
+    "    * hamming loss: 0.2058\n",
+    "    * f1 score: 0.6312\n",
+    "\n",
+    "\n",
+    "For both datasets, the results are much worse than those presented in the paper. I did not check if the paper used cross validation or something like that. But the results are so incredible bad that I don't think that it would make a difference.\n",
+    "\n",
+    "While it _could_ be down to a problem in my implementation of the LOP, it is worth noting that this is the _third_ time that my implementation using the `ClassifierChain` from `scikit-multilearn` performs really terrible. The first was with F-test. The second was with the Genetic Algorithm, but by testing different chain orders. And now we have this.\n",
+    "\n",
+    "**I am starting to think that there might be something off with the `ClassifierChain` implementation from `scikit-multilearn`**. For the tests conducted for the first model (`StackingWithFTest`), we could see that adding or removing \"label features\" (that is: when predicted labels become input features, in an attempt to exploit label correlations) really changed the results, but by 5% or 10%. Sometimes one additional feature would hurt the model, and _not adding_ it would be good, which is the reason why the `StackingWithFTest` performs better with `alpha=0.5` than `alpha=1.0` (which leads to all labels being expanded).\n",
+    "\n",
+    "With that in mind, it makes absolutely no sense that the `ClassifierChain` would perform so bad. It makes no sense that changing the order of the sub-classifiers by only a single position would drop the results by 50% or 75%. After all, the only difference between them is that one has one more, or one less feature than the previous sub classifier.\n",
+    "\n",
+    "I will investigate the `ClassifierChain` implementation from `scikit-multilearn`, and maybe even propose my own implementation"
    ]
   },
   {
