starts to investigate cc implementation

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,77 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# by Copilot:\n",
-    "\n",
-    "class Entropy:\n",
-    "    def __init__(self, probs):\n",
-    "        self.probs = probs\n",
-    "        self.label_count = len(probs)\n",
-    "        self.entropies = self._get_entropies()\n",
-    "        self.joint_entropies = self._get_joint_entropies()\n",
-    "    \n",
-    "    def _get_entropies(self):\n",
-    "        entropies = []\n",
-    "\n",
-    "        for prob in self.probs:\n",
-    "            results = []\n",
-    "            for value in [0,1]:\n",
-    "                prob_for_value = prob[value]\n",
-    "                summand = prob_for_value * math.log(prob_for_value, 2)\n",
-    "                results.append(summand)\n",
-    "            \n",
-    "            entropy = -1 * sum(results)\n",
-    "            entropies.append(entropy)\n",
-    "\n",
-    "        return entropies\n",
-    "\n",
-    "    def _get_joint_entropies(self):\n",
-    "        joint_entropies = []\n",
-    "\n",
-    "        for x in range(self.label_count):\n",
-    "            joint_entropies.append([])\n",
-    "\n",
-    "            for y in range(self.label_count):\n",
-    "                results = []\n",
-    "                for value_i in [0,1]:\n",
-    "                    for value_j in [0,1]:\n",
-    "                        and_prob = self.probs[x][value_i] * self.probs[y][value_j]\n",
-    "                        summand = and_prob * math.log(and_prob, 2)\n",
-    "                        results.append(summand)\n",
-    "                        # print(f\"for x={x}, y={y}, value_i={value_i}, value_j={value_j}, and_prob={and_prob}, math.log(and_prob, 2) = {math.log(and_prob, 2)}, summand={summand}\")\n",
-    "\n",
-    "                joint_entropy = -1 * sum(results)\n",
-    "                joint_entropies[x].append(joint_entropy)\n",
-    "\n",
-    "        return joint_entropies\n",
-    "\n",
-    "    def get_cond_entropy(self, x, y):\n",
-    "        return self.joint_entropies[x][y] - self.entropies[y]\n",
-    "\n",
-    "    def get_cond_entropy_matrix(self):\n",
-    "        matrix = []\n",
-    "\n",
-    "        for i in range(self.label_count):\n",
-    "            matrix.append([])\n",
-    "            for j in range(self.label_count):\n",
-    "                matrix[i].append(self.get_cond_entropy(i,j))\n",
-    "        \n",
-    "        return matrix\n",
-    "\n",
-    "    def get_cond_entropy_matrix(self):\n",
-    "        matrix = []\n",
-    "\n",
-    "        for i in range(self.label_count):\n",
-    "            matrix.append"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +881,7 @@
        " 5: {0: 0.815028901734104, 1: 0.18497109826589594}}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +931,7 @@
        " 5: 0.690832038687419}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +968,7 @@
        "1.3922061344524894"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1002,7 @@
        "0.638716343996387"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1321,7 @@
        "  4: 0}}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1367,7 @@
        "10.650709340745188"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1424,7 @@
        "9.967467469102132"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1722,73 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 9.9. Investigating the `ClassifierChain` implementation\n",
+    "\n",
+    "The source code for the `ClassifierChain` seems simple enough. It trains one base classifier (being a base binary classifier) for each label, always adding the previous label as input feature to the next base classifier in the chain.\n",
+    "\n",
+    "However, there's one part of the code that seems to be wrong. During the `fit` phase, it is creating a new instance of the base classifier (by copying the base classifier). But then it overwrites the class property that holds this base classifier with the new instance. So, in the next iteration, it will create a new instance by copying the previously fitted instance.\n",
+    "\n",
+    "```python\n",
+    "    def fit(self, X, y, order=None):\n",
+    "        # ...\n",
+    "\n",
+    "        X_extended = self._ensure_input_format(\n",
+    "            X, sparse_format=\"csc\", enforce_sparse=True\n",
+    "        )\n",
+    "        y = self._ensure_output_format(y, sparse_format=\"csc\", enforce_sparse=True)\n",
+    "\n",
+    "        self._label_count = y.shape[1]\n",
+    "        self.classifiers_ = [None for x in range(self._label_count)]\n",
+    "\n",
+    "        for label in self._order():\n",
+    "            self.classifier = copy.deepcopy(self.classifier)\n",
+    "            # @edgard: NOTICE THIS LINE\n",
+    "            # it is overwriting the class property with a copy of the base classifier\n",
+    "            # meaning that the next iteration will no longer get a \"pure\" copy\n",
+    "\n",
+    "            y_subset = self._generate_data_subset(y, label, axis=1)\n",
+    "\n",
+    "            self.classifiers_[label] = self.classifier.fit(\n",
+    "                self._ensure_input_format(X_extended),\n",
+    "                self._ensure_output_format(y_subset),\n",
+    "            )\n",
+    "            X_extended = hstack([X_extended, y_subset])\n",
+    "```\n",
+    "\n",
+    "I am not sure if this is supposed to happen. And I am not sure if this will really cause big issues, as theoretically every base classifier is first \"cleaned up\" when calling `fit()`. So multiple calls to `fit()` for the same classifier should really make a new training from scratch.\n",
+    "\n",
+    "Still, even if this is not an issue at all, the code still looks weird because there's no reason to overwrite the class property with a copy of the base classifier. Also, I wonder if, by overwriting the property, **in the end all elements of the `classifiers_` list will be the same object**, as they are references to `self.classifier` and `self.classifier` is being overwritten all the way until the chain is concluded.\n",
+    "\n",
+    "Finally, I most likely need to a add a few `print`s here and there to be able to debug the implementation, and the only way to do it by implementing it myself. So let's try to do my own implementation of `ClassifierChain` and compare the results.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DebuggingClassifierChain:\n",
+    "\n",
+    "    def __init__(self, base_classifier: Any, order: List[int]) -> None:\n",
+    "        self.base_classifier: base_classifier\n",
+    "        self.order = order\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        label_count = y.shape[1]\n",
+    "        order = np.arange(label_count) # let's start with the simplest order possible\n",
+    "\n",
+    "        self.classifiers = []\n",
+    "\n",
+    "        for label in order:\n",
+    "            y_label_specific = y[:, label].todense().reshape(-1)\n",
+    "\n",
+    "            classifier = copy.deepcopy(self.base_classifier)\n",
+    "            # let's also \n",
+    "            classifier.fit(X, y[:, label].todense())\n",
+    "            self.classifiers.append(classifier)"
+   ]
   }
  ],
  "metadata": {
