starts to implement base classifier

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1765,14 +1765,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DebuggingClassifierChain:\n",
-    "\n",
     "    def __init__(self, base_classifier: Any, order: List[int]) -> None:\n",
-    "        self.base_classifier: base_classifier\n",
+    "        self.base_classifier = base_classifier\n",
     "        self.order = order\n",
     "    \n",
     "    def fit(self, X: Any, y: Any):\n",
@@ -1781,13 +1780,34 @@
     "\n",
     "        self.classifiers = []\n",
     "\n",
+    "        X_extended = np.asarray(X.todense())\n",
     "        for label in order:\n",
-    "            y_label_specific = y[:, label].todense().reshape(-1)\n",
+    "            y_label = y[:, label].todense()\n",
+    "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
+    "            # convert_matrix_to_vector\n",
     "\n",
-    "            classifier = copy.deepcopy(self.base_classifier)\n",
-    "            # let's also \n",
-    "            classifier.fit(X, y[:, label].todense())\n",
-    "            self.classifiers.append(classifier)"
+    "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier.fit(X_extended, y_label_vector)\n",
+    "            self.classifiers.append(meta_classifier)\n",
+    "\n",
+    "            # let's also add the predictions to the X matrix\n",
+    "            X_extended = np.hstack([X_extended, y_label])\n",
+    "            X_extended = np.asarray(X_extended)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = DebuggingClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[0,1,2,3,4,5])\n",
+    "\n",
+    "X = datasets[\"scene\"][\"X_train\"]\n",
+    "y = datasets[\"scene\"][\"y_train\"]\n",
+    "m.fit(X, y)"
    ]
   }
  ],
