Update DebuggingClassifierChain with predict method and add baseline model comparison

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,14 +1792,39 @@
     "\n",
     "            # let's also add the predictions to the X matrix\n",
     "            X_extended = np.hstack([X_extended, y_label])\n",
-    "            X_extended = np.asarray(X_extended)\n"
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "\n",
+    "        predicted_labels = []\n",
+    "        for meta_classifier in self.classifiers:\n",
+    "            prediction = meta_classifier.predict(X_extended)\n",
+    "            predicted_labels.append(prediction)\n",
+    "            \n",
+    "            reshaped_prediction = np.asarray(prediction).reshape(-1, 1)\n",
+    "            X_extended = np.hstack([X_extended, reshaped_prediction])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "        reshaped_array = np.asarray(predicted_labels).T\n",
+    "        return reshaped_array\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hamming loss: 0.0898829431438127\n",
+      "f1 score: 0.6944322263507309\n"
+     ]
+    }
+   ],
    "source": [
     "m = DebuggingClassifierChain(\n",
     "    RandomForestClassifier(random_state=42),\n",
@@ -1807,8 +1832,57 @@
     "\n",
     "X = datasets[\"scene\"][\"X_train\"]\n",
     "y = datasets[\"scene\"][\"y_train\"]\n",
-    "m.fit(X, y)"
+    "X_test = datasets[\"scene\"][\"X_test\"]\n",
+    "y_test = datasets[\"scene\"][\"y_test\"]\n",
+    "\n",
+    "m.fit(X, y)\n",
+    "\n",
+    "preds = m.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds)\n",
+    "f1_score = metrics.f1_score(y_test, preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"hamming loss: {hamming_loss}\")\n",
+    "print(f\"f1 score: {f1_score}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(baseline) hamming loss: 0.0898829431438127\n",
+      "(baseline) f1 score: 0.6944322263507309\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_baseline = ClassifierChain(RandomForestClassifier(random_state=42), order=[0,1,2,3,4,5])\n",
+    "m_baseline.fit(X, y)\n",
+    "preds_baseline = m_baseline.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds_baseline)\n",
+    "f1_score = metrics.f1_score(y_test, preds_baseline, average=\"macro\")\n",
+    "\n",
+    "print(f\"(baseline) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(baseline) f1 score: {f1_score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, we managed to get the same results. So both models are working as expected. Now let's change the order a bit of my own implementation and see what happens with the CC performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
