conclusions added, but they are wrong (wip)

--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1776,12 +1776,12 @@
     "    \n",
     "    def fit(self, X: Any, y: Any):\n",
     "        label_count = y.shape[1]\n",
-    "        order = np.arange(label_count) # let's start with the simplest order possible\n",
+    "        # TODO: maybe add some validation, sa the label count must match the order length\n",
     "\n",
     "        self.classifiers = []\n",
     "\n",
     "        X_extended = np.asarray(X.todense())\n",
-    "        for label in order:\n",
+    "        for label in self.order:\n",
     "            y_label = y[:, label].todense()\n",
     "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
     "            # convert_matrix_to_vector\n",
@@ -1877,6 +1877,190 @@
    "metadata": {},
    "source": [
     "Ok, we managed to get the same results. So both models are working as expected. Now let's change the order a bit of my own implementation and see what happens with the CC performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(m2) hamming loss: 0.0898829431438127\n",
+      "(m2) f1 score: 0.6944322263507309\n"
+     ]
+    }
+   ],
+   "source": [
+    "m2 = DebuggingClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[5,4,3,2,1,0])\n",
+    "\n",
+    "m2.fit(X, y)\n",
+    "preds2 = m2.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds2)\n",
+    "f1_score = metrics.f1_score(y_test, preds2, average=\"macro\")\n",
+    "\n",
+    "print(f\"(m2) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(m2) f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(baseline 2) hamming loss: 0.28734671125975475\n",
+      "(baseline 2) f1 score: 0.03248166396957556\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_baseline_2 = ClassifierChain(RandomForestClassifier(random_state=42), order=[5,4,3,2,1,0])\n",
+    "m_baseline_2.fit(X, y)\n",
+    "preds_baseline_2 = m_baseline_2.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds_baseline_2)\n",
+    "f1_score = metrics.f1_score(y_test, preds_baseline_2, average=\"macro\")\n",
+    "\n",
+    "print(f\"(baseline 2) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(baseline 2) f1 score: {f1_score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**For my implementation, changing the order did _not_ cause any difference in the performance**, and it remained just as good. But for `scikit-multilearn` implementation, the performance dropped significantly. This really shows that there's something wrong with their implementation.\n",
+    "\n",
+    "Now, let's just make sure that each model is really using additional features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for label 0, the number of features is 294\n",
+      "for label 1, the number of features is 295\n",
+      "for label 2, the number of features is 296\n",
+      "for label 3, the number of features is 297\n",
+      "for label 4, the number of features is 298\n",
+      "for label 5, the number of features is 299\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    n = m2.classifiers[i].n_features_in_\n",
+    "    print(f\"for label {i}, the number of features is {n}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, nice! Now let's try some more orders and see if any of them is better than the others."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(m3) hamming loss: 0.0898829431438127\n",
+      "(m3) f1 score: 0.6944322263507309\n"
+     ]
+    }
+   ],
+   "source": [
+    "m3 = DebuggingClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[2, 0, 1, 5, 3, 4])\n",
+    "\n",
+    "m3.fit(X, y)\n",
+    "preds3 = m3.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds3)\n",
+    "f1_score = metrics.f1_score(y_test, preds3, average=\"macro\")\n",
+    "\n",
+    "print(f\"(m3) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(m3) f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7176"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7176"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display((preds == preds3).sum())\n",
+    "display(preds.shape[0] * preds.shape[1])\n",
+    "\n",
+    "# if the numbers are the same, then the preds are exactly the same"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tried a few chains (in the same Jupyter notebook cell) and all of them lead to the same result. I even tried the orders obtained in the second model (the one with F-Test) and now for the fourth model, with the LOP. Results are always identical.\n",
+    "\n",
+    "It could a problem with the dataset. Let's try others."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m4 = DebuggingClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[2, 0, 1, 5, 3, 4])\n",
+    "\n",
+    "m4.fit(X, y)\n",
+    "preds3 = m4.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, preds3)\n",
+    "f1_score = metrics.f1_score(y_test, preds3, average=\"macro\")\n",
+    "\n",
+    "print(f\"(m3) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(m3) f1 score: {f1_score}\")\n"
    ]
   },
   {
