--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1881,15 +1881,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(m2) hamming loss: 0.0898829431438127\n",
-      "(m2) f1 score: 0.6944322263507309\n"
+      "(m2) hamming loss: 0.28734671125975475\n",
+      "(m2) f1 score: 0.03248166396957556\n"
      ]
     }
    ],
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1938,9 +1938,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**For my implementation, changing the order did _not_ cause any difference in the performance**, and it remained just as good. But for `scikit-multilearn` implementation, the performance dropped significantly. This really shows that there's something wrong with their implementation.\n",
+    "**Even for my own implementation, changing the order leads to very terrible results**. How come this is possible?\n",
     "\n",
-    "Now, let's just make sure that each model is really using additional features."
+    "Before moving on, let's just make sure that each model is really using additional features."
    ]
   },
   {
@@ -1971,20 +1971,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**INVALID**\n",
+    "\n",
     "Ok, nice! Now let's try some more orders and see if any of them is better than the others."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(m3) hamming loss: 0.0898829431438127\n",
-      "(m3) f1 score: 0.6944322263507309\n"
+      "(m3) hamming loss: 0.2791248606465998\n",
+      "(m3) f1 score: 0.06014278436811501\n"
      ]
     }
    ],
@@ -2005,13 +2007,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7176"
+       "5532"
       ]
      },
      "metadata": {},
@@ -2033,40 +2035,6 @@
     "\n",
     "# if the numbers are the same, then the preds are exactly the same"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I tried a few chains (in the same Jupyter notebook cell) and all of them lead to the same result. I even tried the orders obtained in the second model (the one with F-Test) and now for the fourth model, with the LOP. Results are always identical.\n",
-    "\n",
-    "It could a problem with the dataset. Let's try others."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m4 = DebuggingClassifierChain(\n",
-    "    RandomForestClassifier(random_state=42),\n",
-    "    order=[2, 0, 1, 5, 3, 4])\n",
-    "\n",
-    "m4.fit(X, y)\n",
-    "preds3 = m4.predict(X_test)\n",
-    "\n",
-    "hamming_loss = metrics.hamming_loss(y_test, preds3)\n",
-    "f1_score = metrics.f1_score(y_test, preds3, average=\"macro\")\n",
-    "\n",
-    "print(f\"(m3) hamming loss: {hamming_loss}\")\n",
-    "print(f\"(m3) f1 score: {f1_score}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
